# GPflow

./: .coveragerc  .coveralls.yml  .gitignore  .mailmap  .pylintrc  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GLOSSARY.md  HOWTO_RELEASE.md  MANIFEST.in  Makefile  README.md  RELEASE.md  VERSION  codecov.yml  contributing.md  docs_require.txt  gpflow.code-workspace  my multioutput tests.ipynb  mypy.ini  notebooks  op.py  prototype_example.py  pytest.ini  regression.ipynb  requirements_tests.txt  roadmap.md  run_tests.sh  setup.py  test.py  test_kl.py  test_precedence.py  testlatentinference.py  tests_requirements.txt  travis.sh  varying_noise_test.py  warped_halton.ipynb
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
GPflow/: __init__.py  _settings.py  _version.py  autoflow.py  base.py  bgplvm.py  coldeep.py  conditionals.py  data_holders.py  densities.py  ekernels.py  etransforms.py  glm.py  gpflowrc  gplvm.py  gpmc.py  gpr.py  gprfitc.py  gradkern.py  hmc.py  jitter_cholesky.py  kernel_expectations.py  kernels.py  kullback_leiblers.py  likelihoods.py  maths.py  mean_functions.py  metaautoflow.py  minibatch.py  misc.py  model.py  multikernel.py  multilikelihoods.py  multimodel.py  param.py  parameterized.py  parentable.py  priors.py  profiler.py  quadrature.py  (+16 more)
_unsorted/: Untitled-1  _test_coregion.py  _test_gplvm.py  _test_kldiv.py  _test_method_equivalence.py  _test_methods.py
benchmark/: README.md  benchmark_api.py  plot.py  (+16 more)
jn_gps/: pylintrc  pyproject.toml
jn_gps/jn_gps/: __init__.py  covariances.py  datasets.py  gpr.py  means.py  parameter.py  run.py  sgpr.py
jn_gps/jn_gps/clastion/: __init__.py  clastion.py  utilities.py
jn_gps/jn_gps/clastion/integration/: __init__.py  check_shapes.py  jax.py
jn_gps/tests/: test_all.py
jn_gps/tests/clastion/: test_clastion.py  test_utilities.py
jn_gps/tests/clastion/integration/: test_check_shapes.py  test_jax.py
(+6644 files in other folders)
